draft-ietf-sip-domain-certs-06

--- a/draft-ietf-sip-domain-certs-06.html
+++ b/draft-ietf-sip-domain-certs-06.html
@@ -151,15 +151,15 @@
 <body>
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
-<tr><td class="header">SIP WG</td><td class="header">V. Gurbani</td></tr>
+<tr><td class="header">SIP</td><td class="header">V. Gurbani</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Bell Laboratories, Alcatel-Lucent</td></tr>
 <tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfcRFC3261'>RFC3261</a></td><td class="header">S. Lawrence</td></tr>
 <tr><td class="header">(if&nbsp;approved)</td><td class="header">Avaya, Inc.</td></tr>
 <tr><td class="header">Intended status:  Standards Track</td><td class="header">A. Jeffrey</td></tr>
-<tr><td class="header">Expires:  September 6, 2010</td><td class="header">Bell Laboratories, Alcatel-Lucent</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">March 05, 2010</td></tr>
+<tr><td class="header">Expires:  September 23, 2010</td><td class="header">Bell Laboratories, Alcatel-Lucent</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">March 22, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Domain Certificates in the Session Initiation Protocol (SIP)<br />draft-ietf-sip-domain-certs-05</h1>
+<h1><br />Domain Certificates in the Session Initiation Protocol (SIP)<br />draft-ietf-sip-domain-certs-06</h1>
 
 <h3>Abstract</h3>
 
@@ -168,7 +168,7 @@ X.509 PKIX-compliant certificate for use in a Session Initiation Protocol
 (SIP) over Transport Layer Security (TLS) connection.  More specifically, 
 this document describes how to encode and extract the identity of a SIP domain in a 
 certificate and how to use that identity for SIP domain authentication.
-As such, this document is relevant both to implementors of SIP and to issuers of cetificates.
+As such, this document is relevant both to implementors of SIP and to issuers of certificates.
 
 </p>
 <h3>Status of this Memo</h3>
@@ -192,7 +192,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on September 6, 2010.</p>
+This Internet-Draft will expire on September 23, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -314,8 +314,7 @@ interpreted as described in <a class='info' href='#RFC2119'>RFC 2119<span> (</sp
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 Introduction</h3>
 
-<p><a class='info' href='#RFC5246'>RFC 5246<span> (</span><span class='info'>Dierks, T. and E. Rescorla, &ldquo;The Transport Layer Security (TLS) Protocol Version 1.2,&rdquo; August&nbsp;2008.</span><span>)</span></a> [5] Transport Layer Security (TLS)  has started to
-appear in an increasing number of Session Initiation Protocol (SIP) <a class='info' href='#RFC3261'>RFC 3261<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;SIP: Session Initiation Protocol,&rdquo; June&nbsp;2002.</span><span>)</span></a> [2] implementations.  In order to use the authentication
+<p><a class='info' href='#RFC5246'>RFC 5246<span> (</span><span class='info'>Dierks, T. and E. Rescorla, &ldquo;The Transport Layer Security (TLS) Protocol Version 1.2,&rdquo; August&nbsp;2008.</span><span>)</span></a> [5] Transport Layer Security (TLS) is available in an increasing number of Session Initiation Protocol (SIP) <a class='info' href='#RFC3261'>RFC 3261<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;SIP: Session Initiation Protocol,&rdquo; June&nbsp;2002.</span><span>)</span></a> [2] implementations.  In order to use the authentication
 capabilities of TLS, certificates as defined by the Internet X.509 Public
 Key Infrastructure <a class='info' href='#RFC5280'>RFC 5280<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and   Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a> [6] are required.
 </p>
@@ -400,28 +399,28 @@ authentication based on X.509 certificates.
 <a name="rfc.section.4"></a><h3>4.&nbsp;
 SIP domain to host resolution</h3>
 
-<p>Routing in SIP is performed by having the client execute 
-<a class='info' href='#RFC3263'>RFC 3263<span> (</span><span class='info'>Rosenberg, J. and H. Schulzrinne, &ldquo;Session Initiation Protocol (SIP): Location SIP Servers,&rdquo; June&nbsp;2002.</span><span>)</span></a> [8] procedures on a URI, called the 
-"Application Unique String (AUS) (c.f. Section 8 of <a class='info' href='#RFC3263'>RFC 
-3263<span> (</span><span class='info'>Rosenberg, J. and H. Schulzrinne, &ldquo;Session Initiation Protocol (SIP): Location SIP Servers,&rdquo; June&nbsp;2002.</span><span>)</span></a> [8]).  These procedures take as input a SIP AUS (the SIP domain) and 
-return an ordered set containing one or more IP addresses, and a port number 
-and transport corresponding to each IP address in the set (the "Expected 
-Output") by querying an Domain Name Service (DNS).  If the transport 
-indicates the use of TLS, then a TLS connection is opened to the server on a 
-specific IP address and port.  The server presents an X.509 certificate 
-to the client for verification as part of the initial TLS handshake.
+<p>Routing in SIP is performed by having the client execute <a class='info' href='#RFC3263'>RFC 3263<span> (</span><span class='info'>Rosenberg, J. and H. Schulzrinne, &ldquo;Session Initiation Protocol (SIP): Location SIP Servers,&rdquo; June&nbsp;2002.</span><span>)</span></a> [8] procedures on a URI, called the
+"Application Unique String (AUS) (c.f. Section 8 of <a class='info' href='#RFC3263'>RFC 3263<span> (</span><span class='info'>Rosenberg, J. and H. Schulzrinne, &ldquo;Session Initiation Protocol (SIP): Location SIP Servers,&rdquo; June&nbsp;2002.</span><span>)</span></a> [8]).  These procedures take as input a SIP
+AUS (the SIP URI), extract the domain portion of that URI for use as a
+lookup key, and query the Domain Name Service (DNS) to obtain an ordered
+set of one or more IP addresses with a port number and transport
+corresponding to each IP address in the set (the "Expected Output").  If
+the transport indicates the use of TLS, then a TLS connection is opened to
+the server on a specific IP address and port.  The server presents an X.509
+certificate to the client for verification as part of the initial TLS
+handshake.
 </p>
 <p>The client extracts identifiers from the Subject and any subjectAltName
 extension in the certificate (see <a class='info' href='#cert-subject'>Section&nbsp;7.1<span> (</span><span class='info'>Finding SIP Identities in a Certificate</span><span>)</span></a>) and compares 
-these values to the AUS.  If any identifier match is found, the server is 
+these values to the domain part extracted from the original sip URI (the AUS).  If any identifier match is found, the server is 
 considered to be authenticated and subsequent signaling can now proceed 
 over the TLS connection.  Matching rules for X.509 certificates and the 
 normative behavior for clients is specified in <a class='info' href='#uac'>Section&nbsp;7.3<span> (</span><span class='info'>Client behavior</span><span>)</span></a>.
 </p>
 <p>As an example, consider a request that is to be routed to the SIP address
 "sips:alice@example.com".  This address requires a secure connection to 
-the SIP domain "example.com", which becomes the SIP AUS value.  
-Through a series of DNS manipulations, the AUS is mapped to a set of host
+the SIP domain "example.com" (the 'sips' scheme mandates a secure connection).  
+Through a series of DNS manipulations, the domain name is mapped to a set of host
 addresses and transports.  The entity attempting to create the connection
 selects an address appropriate for use with TLS from this set.  When the connection is established to that server, 
 the server presents a certificate asserting the identity "sip:example.com".  
@@ -496,12 +495,10 @@ created between two proxies:
 However, RFC3261 is silent on whether to use the subjectAltName or CN of the certificate to obtain the domain name, and which takes precedence 
 when there are multiple names identifying the holder of the certificate.
 </p>
-<p>The authentication problem for Proxy-A is straightforward: assuming
-a secure DNS infrastructure and no routing attacks, Proxy-A already knows 
-that Proxy-B is a valid proxy for the example.net domain.  Thus, in the 
-certificate Proxy-A receives from Proxy-B, Proxy-A looks for the host name 
-("Proxy-B.example.net") or an identity consisting of a SIP URI 
-("sip:example.net") that asserts Proxy-B's authority over the example.net
+<p>The authentication problem for Proxy-A is straightforward: in the 
+certificate Proxy-A receives from Proxy-B, Proxy-A looks for an identity
+that is a SIP URI 
+("sip:example.net") or a DNS name ("example.net") that asserts Proxy-B's authority over the example.net
 domain.  Normative behavior for a TLS client like Proxy-A is specified
 in <a class='info' href='#uac'>Section&nbsp;7.3<span> (</span><span class='info'>Client behavior</span><span>)</span></a>.
 </p>
@@ -551,7 +548,7 @@ obtain certificates which contain the identity or identities in the
 subjectAltName extension field.
 </p>
 <p>When assigning certificates to authoritative servers, 
-a SIP service provider MUST ensure that the SIP AUS
+a SIP service provider MUST ensure that the SIP domain
 used to reach the server appears as an identity in the subjectAltName field, 
 or for compatibility with existing certificates, the Subject field of 
 the certificate.  In practice, this means that a service provider distributes 
@@ -571,7 +568,7 @@ identity.
 to authenticate the peer: <a class='info' href='#cert-subject'>Section&nbsp;7.1<span> (</span><span class='info'>Finding SIP Identities in a Certificate</span><span>)</span></a> describes how to extract a set of SIP
 identities from the certificate obtained from a TLS peer, and <a class='info' href='#id-compare'>Section&nbsp;7.2<span> (</span><span class='info'>Comparing SIP Identities</span><span>)</span></a> specifies how to compare SIP identities.  The
 remaining subsections provide context for how and when these rules are to
-be applied by entitites in different SIP roles.
+be applied by entities in different SIP roles.
 </p>
 <a name="cert-subject"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -583,7 +580,7 @@ a certificate by following the procedures described in <a class='info' href='#RF
 </p>
 <p>As specified by <a class='info' href='#RFC5280'>RFC 5280<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and   Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a> [6] section 4.2.1.12, implementations 
 MUST check for restrictions on certificate usage declared by any extendedKeyUsage 
-extentions in the certificate.  The <a class='info' href='#I-D.sip-eku'>SIP Extended Key Usage (EKU) document<span> (</span><span class='info'>Lawrence, S. and V. Gurbani, &ldquo;Using Extended Key Usage (EKU) for Session Initiation Protocol (SIP)     X.509 Certificates,&rdquo; October&nbsp;2009.</span><span>)</span></a> [12] 
+extensions in the certificate.  The <a class='info' href='#I-D.sip-eku'>SIP Extended Key Usage (EKU) document<span> (</span><span class='info'>Lawrence, S. and V. Gurbani, &ldquo;Using Extended Key Usage (EKU) for Session Initiation Protocol (SIP)     X.509 Certificates,&rdquo; October&nbsp;2009.</span><span>)</span></a> [12] 
 defines an extendedKeyUsage for SIP.
 </p>
 <p>Given an X.509 certificate that the above checks have found to be
@@ -669,7 +666,7 @@ Implementations MUST handle Internationalized Domain Names (IDNs)
 in accordance with Section 7.2 of <a class='info' href='#RFC5280'>RFC 5280<span> (</span><span class='info'>Cooper, D., Santesson, S., Farrell, S., Boyen, S., Housley, R., and W. Polk, &ldquo;Internet X.509 Public Key Infrastructure Certificate and   Certificate Revocation List (CRL) Profile,&rdquo; May&nbsp;2008.</span><span>)</span></a> [6]
 .
 </p>
-<p>Implemenations MUST match the values in their entirety:
+<p>Implementations MUST match the values in their entirety:
 </p>
 <blockquote class="text">
 <p>Implementations MUST NOT match suffixes.  For example,
@@ -718,7 +715,7 @@ from the certificate.
 <li>If there were no identities found in the server certificate, the server
 is not authenticated.
 </li>
-<li>If the AUS matches any SIP domain identity obtained from the certificate
+<li>If the domain extracted from the AUS matches any SIP domain identity obtained from the certificate
 when compared as described in section <a class='info' href='#id-compare'>Section&nbsp;7.2<span> (</span><span class='info'>Comparing SIP Identities</span><span>)</span></a>, the
 server is authenticated for the domain.
 </li>
@@ -832,7 +829,7 @@ to query DNS.
 </p>
 <p>Alternatively, if the TLS client hello "server_name" extension as defined in <a class='info' href='#RFC4366'>RFC 4366<span> (</span><span class='info'>Blake-Wilson, S., Nystrom, M., Hopwood, D., Mikkelsen, J., and T. Wright, &ldquo;Transport Layer Security (TLS) Extensions,&rdquo; April&nbsp;2006.</span><span>)</span></a> [4]
 is supported, the client SHOULD use that extension to request a certificate corresponding
-to the specific domain (the SIP AUS) that the client is seeking to 
+to the specific domain (from the SIP AUS) that the client is seeking to 
 establish a connection with.
 </p>
 <a name="sec-cons"></a><br /><hr />
@@ -908,7 +905,7 @@ Connection authentication using Digest</h3>
   authentication of another message received from that address and port.  
   This use of digest goes beyond the assurances that the Digest
   Authentication mechanism
-  was designed to provide.  A SIP imlementation SHOULD NOT use the Digest
+  was designed to provide.  A SIP implementation SHOULD NOT use the Digest
   Authentication of one message on a TCP connection or from a UDP peer to
   infer any authentication of any other messages on that connection or from
   that peer.  Authentication of the
@@ -1096,7 +1093,7 @@ Changes</h3>
 <tr><td class="author" align="right">Phone:&nbsp;</td>
 <td class="author-text">+1 978 288 5508</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
-<td class="author-text"><a href="mailto:scottlawrenc@avaya.com">scottlawrenc@avaya.com</a></td></tr>
+<td class="author-text"><a href="mailto:xmlscott@gmail.com">xmlscott@gmail.com</a></td></tr>
 <tr cellpadding="3"><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Alan S.A. Jeffrey</td></tr>
