draft-ietf-ecrit-location-hiding-req-03

--- a/draft-ietf-ecrit-location-hiding-req-03.html
+++ b/draft-ietf-ecrit-location-hiding-req-03.html
@@ -154,17 +154,30 @@
 <tr><td class="header">ECRIT</td><td class="header">H. Schulzrinne</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Columbia University</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">L. Liess</td></tr>
-<tr><td class="header">Expires: January 14, 2010</td><td class="header">Deutsche Telekom</td></tr>
+<tr><td class="header">Expires: August 25, 2010</td><td class="header">Deutsche Telekom</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">H. Tschofenig</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Nokia Siemens Networks</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">B. Stark</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">AT&amp;T</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">A. Kuett</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Skype</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">July 13, 2009</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">February 21, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Location Hiding: Problem Statement and Requirements<br />draft-ietf-ecrit-location-hiding-req-02.txt</h1>
+<h1><br />Location Hiding: Problem Statement and Requirements<br />draft-ietf-ecrit-location-hiding-req-03.txt</h1>
 
+<h3>Abstract</h3>
+
+<p>The emergency services architecture developed in the IETF Emergency Context Resolution with
+        Internet Technology (ECRIT) working group describes an architecture where location
+        information is provided by access networks to end points or VoIP service providers in order
+        to determine the correct dial string and information to route the call to a Public Safety
+        Answering Point (PSAP). For determining the PSAP Uniform Resource Identifier (URI) the usage
+        of the Location-to-Service Translation (LoST) Protocol is envisioned. 
+</p>
+<p>This document provides a problem statement and lists requirements for situations where the
+        Internet Access Provider (IAP) and/or the Internet Service Provider (ISP) are only willing
+        to disclose limited or no location information.
+</p>
 <h3>Status of this Memo</h3>
 <p>
 This Internet-Draft is submitted to IETF in full
@@ -186,32 +199,35 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on January 14, 2010.</p>
+This Internet-Draft will expire on August 25, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
+Copyright (c) 2010 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
-Provisions Relating to IETF Documents in effect on the date of
-publication of this document (http://trustee.ietf.org/license-info).
-Please review these documents carefully, as they describe your
-rights and restrictions with respect to this document.</p>
-
-<h3>Abstract</h3>
-
-<p>The emergency services architecture developed in the IETF Emergency Context Resolution with
-        Internet Technology (ECRIT) working group describes an architecture where location
-        information is provided by access networks to end points or VoIP service providers in order
-        to determine the correct dial string and information to route the call to a Public Safety
-        Answering Point (PSAP). For determining the PSAP Uniform Resource Identifier (URI) the usage
-        of the Location-to-Service Translation (LoST) Protocol is envisioned. 
-</p>
-<p>This document provides a problem statement and lists requirements for situations where the
-        Internet Access Provider (IAP) and/or the Internet Service Provider (ISP) are only willing
-        to disclose limited or no location information.
-</p><a name="toc"></a><br /><hr />
+Provisions Relating to IETF Documents
+(http://trustee.ietf.org/license-info) in effect on the date of
+publication of this document.  Please review these documents
+carefully, as they describe your rights and restrictions with respect
+to this document. Code Components extracted from this document must
+include Simplified BSD License text as described in Section 4.e of
+the Trust Legal Provisions and are provided without warranty as
+described in the BSD License.</p>
+<p>
+This document may contain material from IETF Documents or IETF
+Contributions published or made publicly available before November
+10, 2008.  The person(s) controlling the copyright in some of this
+material may not have granted the IETF Trust the right to allow
+modifications of such material outside the IETF Standards Process.
+Without obtaining an adequate license from the person(s) controlling
+the copyright in such materials, this document may not be modified
+outside the IETF Standards Process, and derivative works of it may
+not be created outside the IETF Standards Process, except to format
+it for publication as an RFC or to translate it into languages other
+than English.</p>
+<a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
 <a href="#introduction">1.</a>&nbsp;
@@ -231,7 +247,7 @@ High-Level Requirements<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor5">3.2.</a>&nbsp;
 Detailed Requirements<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor6">3.3.</a>&nbsp;
-Desirable Properties<br />
+Miscellaneous Properties<br />
 <a href="#anchor7">4.</a>&nbsp;
 IANA Considerations<br />
 <a href="#anchor8">5.</a>&nbsp;
@@ -410,8 +426,8 @@ Detailed Requirements</h3>
 
 </dd>
 <dt>Req-3:</dt>
-<dd> The solution MUST offer automated discovery of servers and other
-              behavior, i.e., no manual configuration can be assumed. <br />
+<dd> The solution MUST offer automated discovery of servers and and other
+necessary configuration information. No manual configuration can be assumed. <br />
 
 </dd>
 <dt>Req-4:</dt>
@@ -483,7 +499,7 @@ Detailed Requirements</h3>
 <a name="anchor6"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3.3"></a><h3>3.3.&nbsp;
-Desirable Properties</h3>
+Miscellaneous Properties</h3>
 
 <p>
           </p>
@@ -495,11 +511,11 @@ Desirable Properties</h3>
 
 </li>
 <li>The solution SHOULD minimize the impact on LoST, SIP conveyance
-                <a class='info' href='#I-D.ietf-sip-location-conveyance'>[I&#8209;D.ietf&#8209;sip&#8209;location&#8209;conveyance]<span> (</span><span class='info'>Polk, J. and B. Rosen, &ldquo;Location Conveyance for the Session Initiation Protocol,&rdquo; March&nbsp;2009.</span><span>)</span></a> and DHCP.<br />
+                <a class='info' href='#I-D.ietf-sipcore-location-conveyance'>[I&#8209;D.ietf&#8209;sipcore&#8209;location&#8209;conveyance]<span> (</span><span class='info'>Polk, J. and B. Rosen, &ldquo;Location Conveyance for the Session Initiation Protocol,&rdquo; February&nbsp;2010.</span><span>)</span></a> and DHCP.<br />
 <br />
 
 </li>
-<li>The solution SHOULD NOT break by the presence of NATs and SHOULD
+<li>The solution SHOULD NOT break in the presence of NATs and SHOULD
               consider the presence of legacy devices, as described in <a class='info' href='#I-D.ietf-geopriv-l7-lcp-ps'>[I&#8209;D.ietf&#8209;geopriv&#8209;l7&#8209;lcp&#8209;ps]<span> (</span><span class='info'>Tschofenig, H. and H. Schulzrinne, &ldquo;GEOPRIV Layer 7 Location Configuration Protocol; Problem Statement and Requirements,&rdquo; July&nbsp;2009.</span><span>)</span></a>.
 </li>
 </ul><p>
@@ -546,7 +562,7 @@ Acknowledgments</h3>
 </ul><p>
       
 </p>
-<p>The authors would also like to thank Ben Campbell for his Gen-ART review.
+<p>The authors would also like to thank Ben Campbell for his Gen-ART review. Additionally, we would like to thank Jari Arkko, Alexey Melnikov, Tim Polk, and Dan Romascanu for their IESG review.
 </p>
 <a name="rfc.references"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -559,16 +575,10 @@ References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
 <td class="author-text">Bradner, S., &ldquo;<a href="ftp://ftp.isi.edu/in-notes/rfc2119.txt">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; March&nbsp;1997.</td></tr>
-</table>
-
-<a name="rfc.references2"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>7.2.&nbsp;Informative References</h3>
-<table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-geopriv-l7-lcp-ps">[I-D.ietf-geopriv-l7-lcp-ps]</a></td>
 <td class="author-text">Tschofenig, H. and H. Schulzrinne, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-geopriv-l7-lcp-ps-10.txt">GEOPRIV Layer 7 Location Configuration Protocol; Problem Statement and Requirements</a>,&rdquo; draft-ietf-geopriv-l7-lcp-ps-10 (work in progress), July&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-geopriv-l7-lcp-ps-10.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="I-D.ietf-sip-location-conveyance">[I-D.ietf-sip-location-conveyance]</a></td>
-<td class="author-text">Polk, J. and B. Rosen, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-location-conveyance-13.txt">Location Conveyance for the Session Initiation Protocol</a>,&rdquo; draft-ietf-sip-location-conveyance-13 (work in progress), March&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-location-conveyance-13.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="I-D.ietf-sipcore-location-conveyance">[I-D.ietf-sipcore-location-conveyance]</a></td>
+<td class="author-text">Polk, J. and B. Rosen, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sipcore-location-conveyance-02.txt">Location Conveyance for the Session Initiation Protocol</a>,&rdquo; draft-ietf-sipcore-location-conveyance-02 (work in progress), February&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sipcore-location-conveyance-02.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-ecrit-framework">[I-D.ietf-ecrit-framework]</a></td>
 <td class="author-text">Rosen, B., Schulzrinne, H., Polk, J., and A. Newton, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-ecrit-framework-10.txt">Framework for Emergency Calling using Internet Multimedia</a>,&rdquo; draft-ietf-ecrit-framework-10 (work in progress), July&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-ecrit-framework-10.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5069">[RFC5069]</a></td>
@@ -583,6 +593,12 @@ References</h3>
 <td class="author-text">Barnes, M., Winterbottom, J., Thomson, M., and B. Stark, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-geopriv-http-location-delivery-16.txt">HTTP Enabled Location Delivery (HELD)</a>,&rdquo; draft-ietf-geopriv-http-location-delivery-16 (work in progress), August&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-geopriv-http-location-delivery-16.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-ecrit-specifying-holes">[I-D.ietf-ecrit-specifying-holes]</a></td>
 <td class="author-text">Winterbottom, J. and M. Thomson, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-ecrit-specifying-holes-03.txt">Specifying Holes in LoST Service Boundaries</a>,&rdquo; draft-ietf-ecrit-specifying-holes-03 (work in progress), March&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-ecrit-specifying-holes-03.txt">TXT</a>).</td></tr>
+</table>
+
+<a name="rfc.references2"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<h3>7.2.&nbsp;Informative References</h3>
+<table width="99%" border="0">
 </table>
 
 <a name="rfc.authors"></a><br /><hr />
