draft-davis-u-langtag-ext-04

--- a/draft-davis-u-langtag-ext-04.html
+++ b/draft-davis-u-langtag-ext-04.html
@@ -154,12 +154,12 @@
 <tr><td class="header">Internet Engineering Task Force</td><td class="header">M. Davis</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Google</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">A. Phillips</td></tr>
-<tr><td class="header">Expires: January 8, 2011</td><td class="header">Lab126</td></tr>
+<tr><td class="header">Expires: February 27, 2011</td><td class="header">Lab126</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Y. Umaoka</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">IBM</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">July 7, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">August 26, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />BCP 47 Extension U<br />draft-davis-u-langtag-ext-03</h1>
+<h1><br />BCP 47 Extension U<br />draft-davis-u-langtag-ext-04</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 8, 2011.</p>
+This Internet-Draft will expire on February 27, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -307,7 +307,7 @@ http://www.unicode.org/consortium/tc-procedures.html, and subject to the Unicode
 <a name="rfc.section.2.1"></a><h3>2.1.&nbsp;
 Summary</h3>
 
-<p>The subtags available for use in the 'u' extension consist of a set of attributes, keys, and types. Attributes, keys, types, and their respective meanings are defined in <a href='http://unicode.org/reports/tr35/#Unicode_Language_and_Locale_Identifiers'>Section 3 (Unicode Language and Locale Identifiers)</a> of <a class='info' href='#UTS35'>[UTS35]<span> (</span><span class='info'>Davis, M., &ldquo;Unicode Technical Standard #35: Locale Data Markup Language (LDML),&rdquo; December&nbsp;2007.</span><span>)</span></a>. The following is a summary of that definition (for details see Section 3):</p>
+<p>The subtags available for use in the 'u' extension consist of a set of attributes, keys, and types. Attributes, keys, types, and their respective meanings are defined in <a href='http://unicode.org/reports/tr35/#Unicode_Language_and_Locale_Identifiers'>Section 3 (Unicode Language and Locale Identifiers)</a> of <a class='info' href='#UTS35'>[UTS35]<span> (</span><span class='info'>Davis, M., &ldquo;Unicode Technical Standard #35: Locale Data Markup Language (LDML),&rdquo; December&nbsp;2007.</span><span>)</span></a>. The following is a summary of that definition:</p>
 <ul class="text">
 <li>An 'attribute' is a subtag with a length of three to eight characters following the singleton and preceding any 'keyword' sequences. No attributes were defined at the time of this document's publication.
 </li>
@@ -335,9 +335,9 @@ Summary</h3>
 </li>
 </ul>
 
-<p>Only the first occurrence of an attributes or key conveys meaning in a language tag. When interpreting tags containing the Unicode locale extension, duplicate attributes or keywords are ignored in the following way: ignore any attribute that has already appeared in the tag and ignore any keyword whose key has already occurred in the tag.
+<p>Only the first occurrence of an attribute or key conveys meaning in a language tag. When interpreting tags containing the Unicode locale extension, duplicate attributes or keywords are ignored in the following way: ignore any attribute that has already appeared in the tag and ignore any keyword whose key has already occurred in the tag.
 </p>
-<p>With successive versions of <a class='info' href='#UTS35'>[UTS35]<span> (</span><span class='info'>Davis, M., &ldquo;Unicode Technical Standard #35: Locale Data Markup Language (LDML),&rdquo; December&nbsp;2007.</span><span>)</span></a>, additional attributes, keys, and types MAY be defined. Once defined, attributes, keys, and types will never be removed. 
+<p>Successive versions of <a class='info' href='#UTS35'>[UTS35]<span> (</span><span class='info'>Davis, M., &ldquo;Unicode Technical Standard #35: Locale Data Markup Language (LDML),&rdquo; December&nbsp;2007.</span><span>)</span></a> could define additional attributes, keys, and types. Once defined, attributes, keys, and types will never be removed. 
 </p>
 <p>Beginning with CLDR version 1.7.2, machine-readable files are available listing the valid attributes, keys, and types for each successive version of <a class='info' href='#UTS35'>[UTS35]<span> (</span><span class='info'>Davis, M., &ldquo;Unicode Technical Standard #35: Locale Data Markup Language (LDML),&rdquo; December&nbsp;2007.</span><span>)</span></a>. These releases are listed on <a href='http://cldr.unicode.org/index/downloads'>http://cldr.unicode.org/index/downloads</a>. Each release has an associated data directory of the form "http://unicode.org/Public/cldr/&lt;version&gt;", where "&lt;version&gt;" is replaced by the release number.   For example, for version 1.7.2, the "core.zip" file is located at <a href='http://unicode.org/Public/cldr/1.7.2/'>http://unicode.org/Public/cldr/1.7.2/core.zip</a>. Inside the "core.zip" file, the path "common/bcp47" contains the data files defining the valid attributes, keys, and types. The most recent version is always identified by the version "latest" and can be accessed by the URL in <a class='info' href='#regform'>Section&nbsp;2.2<span> (</span><span class='info'>Registration Form</span><span>)</span></a>.
 </p>
