--- a/draft-ietf-mip4-nemov4-dynamic-05.html
+++ b/draft-ietf-mip4-nemov4-dynamic-05.html
@@ -358,7 +358,8 @@
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Home Agent Considerations">
 <link href="#rfc.section.4" rel="Chapter" title="4 Security Considerations">
 <link href="#rfc.section.5" rel="Chapter" title="5 IANA Considerations">
-<link href="#rfc.references" rel="Chapter" title="6 References">
+<link href="#rfc.section.6" rel="Chapter" title="6 Acknowledgements">
+<link href="#rfc.references" rel="Chapter" title="7 References">
 <link href="#rfc.authors" rel="Chapter">
 
 
@@ -393,7 +394,7 @@
 <td class="right">V. Narayanan</td>
 </tr>
 <tr>
-<td class="left">Expires: October 02, 2011</td>
+<td class="left">Expires: October 30, 2011</td>
 <td class="right">Qualcomm</td>
 </tr>
 <tr>
@@ -406,7 +407,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">March 31, 2011</td>
+<td class="right">April 28, 2011</td>
 </tr>
 
     	
@@ -414,7 +415,7 @@
   </table>
 
   <p class="title">Dynamic Prefix Allocation for NEMOv4<br />
-  <span class="filename">draft-ietf-mip4-nemov4-dynamic-04.txt</span></p>
+  <span class="filename">draft-ietf-mip4-nemov4-dynamic-05.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>The base NEMOv4 specification defines extensions to Mobile IPv4 for mobile networks. This specification defines a dynamic prefix allocation mechanism.</p>
@@ -422,7 +423,7 @@
 <p>This Internet-Draft is submitted to IETF in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 02, 2011.</p>
+<p>This Internet-Draft will expire on October 30, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.</p>
@@ -446,7 +447,9 @@
 </li>
 <li>5.   <a href="#rfc.section.5">IANA Considerations</a>
 </li>
-<li>6.   <a href="#rfc.references">References</a>
+<li>6.   <a href="#rfc.section.6">Acknowledgements</a>
+</li>
+<li>7.   <a href="#rfc.references">References</a>
 </li>
 <li><a href="#rfc.authors">Authors' Addresses</a>
 </li>
@@ -459,7 +462,7 @@
 <p id="rfc.section.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.</p>
 <h1 id="rfc.section.2">
 <a href="#rfc.section.2">2.</a> Introduction</h1>
-<p id="rfc.section.2.p.1">The base NEMOv4 specification <a href="#RFC5177">[RFC5177]</a> defines extensions to Mobile IPv4 <a href="#RFC3344">[RFC3344]</a> for mobile networks. This specification adds support for dynamic allocation of mobile prefixes by the home agent.</p>
+<p id="rfc.section.2.p.1">The base NEMOv4 specification <a href="#RFC5177">[RFC5177]</a> defines extensions to Mobile IPv4 <a href="#RFC5944">[RFC5944]</a> for mobile networks. This specification adds support for dynamic allocation of mobile prefixes by the home agent.</p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> <a href="#system" id="system">Dynamic Mobile Prefix allocation</a>
 </h1>
@@ -467,24 +470,27 @@
 <h1 id="rfc.section.3.1">
 <a href="#rfc.section.3.1">3.1.</a> Mobile Client Considerations</h1>
 <p><a href="#RFC5177">[RFC5177]</a> defines that the prefix field of the mobile network request extension can not be set to zero.  This mechanism works only in combination with the explicit mode of operation defined in <a href="#RFC5177">[RFC5177]</a>.</p>
-<p id="rfc.section.3.1.p.2">According to this specification, a mobile client MAY include one or more mobile network request extensions with the prefix field set to zero. Such mobile network request extensions indicate that the mobile client requests mobile network prefix(es) to be assigned to it by the home agent.  In this case, the mobile client MAY set the prefix length field of such extensions to zero or to a length of its choice as a hint to the home agent. According to this specification, mobile network request extensions with the prefix field set to zero MAY be included in a registration request message either during initial registration or during a subsequent registration. </p>
-<p id="rfc.section.3.1.p.3">When a mobile client receives a registration reply it MUST process it as defined in <a href="#RFC3344">MIPv4</a> <cite title="NONE">[RFC3344]</cite> and <a href="#RFC5177">[RFC5177]</a>. If one or more network acknowledgement extension are included with the Code field set to &#8220;Success&#8221; the mobile client SHOULD treat the prefixes in the corresponding prefix fields as allocated prefixes and create the appropriate bindings as defined in <a href="#RFC5177">[RFC5177]</a>.</p>
-<p id="rfc.section.3.1.p.4">If in response to a registration request with a mobile network request extension with the prefix field set to zero, a mobile client receives a registration reply with a network acknowledgement extensiona including Code field set to 1 &#8220;invalid prefix", it may use it as a hint that the home agent does not support dynamic prefix allocation.</p>
+<p id="rfc.section.3.1.p.2">According to this specification, a Mobile Router MAY include one or more mobile network request extensions with the prefix field set to zero. Such mobile network request extensions indicate that the Mobile Router requests mobile network prefix(es) to be assigned to it by the home agent.  In this case, the Mobile Router MAY set the prefix length field of such extensions to zero or to a length of its choice as a hint to the home agent. According to this specification, mobile network request extensions with the prefix field set to zero MAY be included in a registration request message either during initial registration or during a subsequent registration. </p>
+<p id="rfc.section.3.1.p.3">When a Mobile Router receives a registration reply it MUST process it as defined in <a href="#RFC5944">Mobile IPv4</a> <cite title="NONE">[RFC5944]</cite> and <a href="#RFC5177">[RFC5177]</a>. If one or more network acknowledgement extension are included with the Code field set to &#8220;Success&#8221; the Mobile Router SHOULD treat the prefixes in the corresponding prefix fields as allocated prefixes and create the appropriate bindings as defined in <a href="#RFC5177">[RFC5177]</a>.</p>
+<p id="rfc.section.3.1.p.4">If in response to a registration request with a mobile network request extension with the prefix field set to zero, a Mobile Router receives a registration reply with a network acknowledgement extension including Code field set to 1 &#8220;invalid prefix", it may use it as a hint that the home agent does not support dynamic prefix allocation.</p>
 <h1 id="rfc.section.3.2">
 <a href="#rfc.section.3.2">3.2.</a> Home Agent Considerations</h1>
-<p id="rfc.section.3.2.p.1">A home agent receiving a mobile network request extension with the prefix field set to zero MAY return a mobile network acknowledgement extension <a href="#RFC5177">[RFC5177]</a> with the prefix field set to the prefix allocated to the mobile client. The length of that prefix is at the discretion of the home agent. The home agent MAY take into account the prefix length hint if one is included in the mobile network request extension. Once the home agent allocates a prefix it MUST maintain the prefix registration table as defined in <a href="#RFC5177">[RFC5177]</a>. Alternatively the home agent MAY return a mobile network acknowledgement extension with the Code field set to one of the negative codes defined in <a href="#RFC5177">[RFC5177]</a>.</p>
+<p id="rfc.section.3.2.p.1">A home agent receiving a mobile network request extension with the prefix field set to zero MAY return a mobile network acknowledgement extension <a href="#RFC5177">[RFC5177]</a> with the prefix field set to the prefix allocated to the Mobile Router. The length of that prefix is at the discretion of the home agent. The home agent MAY take into account the prefix length hint if one is included in the mobile network request extension. Once the home agent allocates a prefix it MUST maintain the prefix registration table as defined in <a href="#RFC5177">[RFC5177]</a>. Alternatively the home agent MAY return a mobile network acknowledgement extension with the Code field set to one of the negative codes defined in <a href="#RFC5177">[RFC5177]</a>.</p>
 <p id="rfc.section.3.2.p.2">Dynamic mobile prefix allocation as defined in this specification MAY be combined with dynamic home address allocation as defined in <a href="#RFC5177">[RFC5177]</a>. In other words the home address field of the registration request message MAY be set to zero while the message also includes one or more mobile network request extensions with the prefix field also set to zero.</p>
 <p id="rfc.section.3.2.p.3">Once the home agent allocates a prefix it MUST maintain the prefix registration table as defined in <a href="#RFC5177">[RFC5177]</a>. The lifetime of the allocated prefix will be equal to the lifetime of the binding cache entry</p>
-<p id="rfc.section.3.2.p.4">For dynamic prefix allocation the mobile client&#8217;s home address MAY be used to identify the client if it is not set to zero. Otherwise, as defined in the NAI extension <a href="#RFC2794">[RFC2794]</a> of MIPv4 <a href="#RFC2794">[RFC2794]</a>, the NAI extension needs to be included in the registration request, in which case the same extension SHOULD be used to identify the mobile client for prefix allocation purposes.  </p>
+<p id="rfc.section.3.2.p.4">For dynamic prefix allocation the Mobile Router&#8217;s home address MAY be used to identify the client if it is not set to zero. Otherwise, as defined in the NAI extension <a href="#RFC2794">[RFC2794]</a> of Mobile IPv4 <a href="#RFC2794">[RFC2794]</a>, the NAI extension needs to be included in the registration request, in which case the same extension SHOULD be used to identify the Mobile Router for prefix allocation purposes.  </p>
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> Security Considerations</h1>
-<p id="rfc.section.4.p.1">This specification operates in the security constraints and requirements of <a href="#RFC3344">MIPv4</a> <cite title="NONE">[RFC3344]</cite>, <a href="#RFC2794">NAI</a> <cite title="NONE">[RFC2794]</cite> and <a href="#RFC5177">[RFC5177]</a>. </p>
+<p id="rfc.section.4.p.1">This specification operates in the security constraints and requirements of <a href="#RFC5944">Mobile IPv4</a> <cite title="NONE">[RFC5944]</cite>, <a href="#RFC2794">NAI</a> <cite title="NONE">[RFC2794]</cite> and <a href="#RFC5177">[RFC5177]</a>. </p>
 <p id="rfc.section.4.p.2">Home agent implementations SHOULD take steps to prevent address exhaustion attacks. One way to limit the effectiveness of such an attack is to limit the number and size of prefixes any one mobile router can be allocated.</p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> IANA Considerations</h1>
 <p id="rfc.section.5.p.1">This document has no actions for IANA</p>
+<h1 id="rfc.section.6">
+<a href="#rfc.section.6">6.</a> Acknowledgements</h1>
+<p id="rfc.section.6.p.1">The authors would like to thank Pete McCann and Alexandru Petrescu for their reviews and comments.  </p>
 <h1 id="rfc.references">
-<a href="#rfc.references">6.</a> References</h1>
+<a href="#rfc.references">7.</a> References</h1>
 <table><tbody>
 <tr>
 <td class="reference"><b id="RFC2119">[RFC2119]</b></td>
@@ -497,9 +503,9 @@
 <a href="mailto:pcalhoun@eng.sun.com" title="Sun Microsystems Laboratories">Calhoun, P.</a> and <a href="mailto:charliep@iprg.nokia.com" title="Nokia Research Center">C. Perkins</a>, "<a href="http://tools.ietf.org/html/rfc2794">Mobile IP Network Access Identifier Extension for IPv4</a>", RFC 2794, March 2000.</td>
 </tr>
 <tr>
-<td class="reference"><b id="RFC3344">[RFC3344]</b></td>
+<td class="reference"><b id="RFC5944">[RFC5944]</b></td>
 <td class="top">
-<a>Perkins, C.</a>, "<a href="http://tools.ietf.org/html/rfc3344">IP Mobility Support for IPv4</a>", RFC 3344, August 2002.</td>
+<a>Perkins, C.</a>, "<a href="http://tools.ietf.org/html/rfc5944">IP Mobility Support for IPv4, Revised</a>", RFC 5944, November 2010.</td>
 </tr>
 <tr>
 <td class="reference"><b id="RFC5177">[RFC5177]</b></td>
